# modem-cat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  build-tauri.bat  build.bat  check-err.txt  package-lock.json  package.json  test-at.ps1  tsconfig.json
.claude/: settings.local.json
.github/workflows/: build.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.workbuddy/memory/: 2026-04-17.md
docs/: ARCHITECTURE.md  AT_COMMANDS.md  CALL_FLOW.md  CODE_MAP.md  MODEM_BAND_SPECS.md  Quectel_AT_Commands.md  TECH_STACK.md
docs/superpowers/plans/: 2026-04-04-modem-cat-ui-redesign.md  2026-04-04-page-layout-adjustment.md  2026-04-30-multi-vendor-modem-hal.md
docs/superpowers/specs/: 2026-04-04-modem-cat-ui-redesign.md  2026-04-30-multi-vendor-modem-hal-design.md
modem-cli-embedded/: Cargo.toml
modem-cli-embedded/src/: main.rs
modem-hal/: Cargo.toml  build.rs  package.json
modem-hal/src/: lib.rs  modem_factory.rs  modem_vendor.rs  types.rs
modem-hal/src/transport/: mod.rs  serial.rs  tcp.rs
modem-hal/src/vendors/: mod.rs
modem-hal/src/vendors/quectel/: mod.rs  parser.rs  qualcomm.rs  unisoc.rs
modem-hal/src/vendors/tdtech/: dial.rs  mod.rs  parser.rs
scripts/: test-modem.ts
specs/001-modem-debug-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modem-debug-tool/checklists/: requirements.md
specs/001-modem-debug-tool/contracts/: cli.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: at_adapter.rs  at_parser.rs  lib.rs  main.rs  modem_factory.rs  modem_vendor.rs  network.rs  serial.rs  transport.rs  types.rs  vendor_detector.rs
src-tauri/src/vendors/: mod.rs  qualcomm.rs  unisoc.rs
src-tauri/tests/: at_test.rs
src/cli/: index.ts
src/cli/commands/: at.ts  help.ts  (+9 more)
src/desktop/: index.html
src/lib/: formatter.ts  logger.ts
(+10 files in other folders)
