[package]
name = "modem-hal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["serial"]
serial = ["dep:serialport"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(not(target_env = "musl"))'.dependencies]
serialport = { version = "4", optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
serialport = { version = "4", default-features = false, optional = true }
