[package]
name = "modem-hal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["serial"]
serial = ["dep:serialport"]
napi-feature = ["dep:napi", "dep:napi-derive"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
napi = { version = "2", features = ["napi6"], optional = true }
napi-derive = { version = "2", optional = true }

[target.'cfg(not(target_env = "musl"))'.dependencies]
serialport = { version = "4", optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
serialport = { version = "4", default-features = false, optional = true }

[build-dependencies]
napi-build = "1"
